Copied inputs to signin.html, tried on some signup.css changes

--- a/static/signup.css
+++ b/static/signup.css
@@ -40,11 +40,13 @@ input{
 }
 
 .social-links{
-    display: flex;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
 }
 
 .social-box{
     display: flex;
+    
     
 }
 .social{
