--- a/static/landing.css
+++ b/static/landing.css
@@ -1,9 +1,18 @@
+*{
+    font-family: 'Heebo', sans-serif;
+}
+header a, main a{
+    text-decoration: none;
+    color: rgb(68, 68, 68);
+
+}
 /* -----HEADER----- */
 header {
     /* border: 1px solid yellow; */
     display: grid;
     grid-template-columns: 66% 34%;
     margin: 3%;
+    margin-left: 5%;
 }
 /* level 1.1 */
 .navbar {
@@ -15,8 +24,8 @@ header {
 .signin-try {
     /* border: 1px solid teal; */
     display: grid;
-    grid-template-columns: 40% 40%;
-    margin-left: 30%;
+    grid-template-columns: 38% 38%;
+    margin-left: 40%;
     column-gap: 10%;
 }
 .logo, .nav-buttons, .secondary-buttons{
@@ -24,7 +33,17 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.logo {
+    /* border: 1px solid black; */
+    width: 60%;
+}
 
+.nav-buttons{
+    padding-top: 5%;
+    font-size: 1.2em;
+    font-weight: 400;
+    color: rgb(45, 45, 45);
 }
 .nav-buttons, .secondary-buttons {
     /* border: 1px solid black; */
@@ -32,27 +51,33 @@ header {
     height: auto;
 
 }
+.secondary-buttons{
+    /* border: 1px solid black; */
+    font-size: 1.6em;
+    font-weight: 500;
+}
 
 .sign-in {
-    border: 3px solid blue;
+    border: 3px solid rgb(7,80,247);
     border-radius: 10px;
-    color: blue;
+    color: rgb(7,80,247);
 
 }
 
 .try-it {
-    border: 1px solid blue;
+    border: 1px solid rgb(7,80,247);
     border-radius: 10px;
-    background-color: blue;
+    background-color: rgb(7,80,247);
     color: white;
 }
 
 /* -----MAIN----- */
-main{
+.banner-page{
+    /* border: 1px solid hotpink; */
     display: grid;
-    grid-template-columns: 50% 38%;
-    margin: 4% 1% 4% 7%;
-    column-gap: 5%;
+    grid-template-columns: 53% 43%;
+    column-gap: 6%;
+    margin: 4% 4% 1% 8%;
 }
 
 /* level 1.1 */
@@ -63,11 +88,11 @@ main{
 }
 
 .checkerboard{
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .main-writing{
-    border: 1px solid hotpink;
+    /* border: 1px solid hotpink; */
     display: grid;
     grid-template-rows: 25% 25% 25% 25%;
 }
@@ -97,15 +122,21 @@ main{
 
 .company-motto1{
     /* border: 1px solid rgb(0, 0, 0); */
-    font-size: 5em;
+    font-size: 6.5em;
+    font-weight: 600;
 }
 
 .company-hook{
-    font-size: 2.5em;
+    margin-top: 3%;
+    margin-bottom: 1%;
+    font-size: 3.5em;
+    font-weight: 500;
 }
 
 .company-promise{
     font-size: 2em;
+    font-weight: 600;
+    margin-top: 0%;
 }
 
 .signup-free{
@@ -134,6 +165,8 @@ main{
 
 .checkerboard img{
     /* border: 1px solid grey; */
+    width: 100%;
+    height: auto;
 }
 
 /* -----FOOTER----- */
