--- a/static/landing.css
+++ b/static/landing.css
@@ -1,10 +1,14 @@
+body{
+    min-height: 100vh;
+    display: grid;
+    grid-template-rows: auto 1fr 1fr auto;
+}
 *{
     font-family: 'Heebo', sans-serif;
 }
 header a, main a{
     text-decoration: none;
     color: rgb(68, 68, 68);
-
 }
 /* -----HEADER----- */
 header {
@@ -33,6 +37,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    white-space: nowrap
 }
 .logo {
     /* border: 1px solid black; */
@@ -41,7 +46,7 @@ header {
 
 .nav-buttons{
     padding-top: 5%;
-    font-size: 1.2em;
+    font-size: 1vw;
     font-weight: 400;
     color: rgb(45, 45, 45);
 }
@@ -53,12 +58,12 @@ header {
 }
 .secondary-buttons{
     /* border: 1px solid black; */
-    font-size: 1.6em;
+    font-size: 1.2vw;
     font-weight: 500;
 }
 
 .sign-in {
-    border: 3px solid rgb(7,80,247);
+    border: .2vw solid rgb(7,80,247);
     border-radius: 10px;
     color: rgb(7,80,247);
 
@@ -77,14 +82,15 @@ header {
     display: grid;
     grid-template-columns: 53% 43%;
     column-gap: 6%;
-    margin: 4% 4% 1% 8%;
+    margin: 2% 4% 1% 8%;
 }
 
 /* level 1.1 */
 .about-container{
     /* border: 1px solid green; */
+    padding-top: 5%;
     display: grid;
-    grid-template-rows: 45% 13% 6% 4%;
+    grid-template-rows: 50% 13% 10% 9% 9%;
 }
 
 .checkerboard{
@@ -99,13 +105,13 @@ header {
 
 .website-guide-buttons{
     display: grid;
-    grid-template-columns: 26% 26%;
+    grid-template-columns: 30% 30%;
     column-gap: 3%;
 }
 
 .final-line-container{
     display: grid;
-    grid-template-columns: 17% 5% 26% 5% 20%;
+    grid-template-columns: 17% 5% 30% 5% 20%;
 
 }
 .existing-user-container{
@@ -122,46 +128,71 @@ header {
 
 .company-motto1{
     /* border: 1px solid rgb(0, 0, 0); */
-    font-size: 6.5em;
+    font-size: 4.5vw;
     font-weight: 600;
 }
 
 .company-hook{
-    margin-top: 3%;
-    margin-bottom: 1%;
-    font-size: 3.5em;
+    margin-top: 2%;
+    margin-bottom: 3%;
+    /* font-size: 3.5em; */
+    font-size: 2.45vw;
     font-weight: 500;
 }
 
 .company-promise{
-    font-size: 2em;
+    /* font-size: 2em; */
+    font-size: 1.45vw;
     font-weight: 600;
     margin-top: 0%;
+    color: grey;
+    margin-bottom: 3%;
+}
+.website-guide-buttons{
+    margin-bottom: 0%;
+}
+.chat-button{
+    border: .2vw solid rgb(7,80,247);
+}
+
+.signup-free, .chat-button{
+    justify-content: center;
+    font-size: 1.3vw;
+    border-radius: 1vw;
+    font-weight: 700;
 }
 
 .signup-free{
-    justify-content: center;
-    border: 1px solid blue;
-    font-size: 1.5em;
-    border-radius: 15px;
+    background-color: rgb(7,80,247);
 
 }
-.chat-button{
-    justify-content: center;
-    border: 1px solid blue;
-    font-size: 1.5em;
-    border-radius: 15px;
+
+.signup-free a{
+    color: white;
 }
 
-.existing-user-text{
-    font-size: 1.5em;
+
+.chat-button a{
+    color: rgb(7,80,247);
+}
+
+.existing-user-text, .existing-user-container a{
+    font-size: 1.45vw;
+    color: rgb(104, 104, 104);
     margin: 0;
 }
 
 .final-line-container p{
-    border: 1px solid grey;
-}
+    /* border: 1px solid grey; */
+    display: flex;
+    align-items: center;
+    font-size: .86vw;
 
+}
+.final-line-container :nth-of-type(even){
+    font-size: 1.7vw;
+    color: rgb(7,80,247);
+}
 
 .checkerboard img{
     /* border: 1px solid grey; */
@@ -170,33 +201,82 @@ header {
 }
 
 /* -----FOOTER----- */
-footer{
-    border: 1px solid green;
-    display: flex;
-    justify-content: center;
-    background-color: blue;
-    color: white;
-}
-.footer-size{
-    width: 40%;
-    height: auto;
-}
 .footer-content{
-    border: 1px solid red;
-    display: grid;
-    grid-template-rows: 50% 25% 25%;
+    background-color: rgb(7,80,247);
+    margin-bottom: 0;
+    height: 140%;
+
 }
-.get-started-container{
+.footer-grid{
     display: grid;
-    grid-template-columns: 50% 50%;
-}
-.footer-final-line-container {
-    display: grid;
-    grid-template-columns: 17% 5% 28% 5% 20%;
-    column-gap: 5%;
+    grid-template-rows: 60% 30% 30%;
 }
 
-.footer-content p, .get-started-container p, .footer-final-line-container p{
+.footer-text-container{
+    /* border: 1px solid red; */
+}
+.get-started-container{
+    /* border: 1px solid green; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 10%;
+    margin-left: 35%;
+    margin-right: 35%;
+}
+.footer-final-line-container{
+    /* border: 1px solid white; */
+    display: grid;
+    grid-template-columns: 20% 10% 40% 10% 25%;
+    margin-left: 33%;
+    margin-right: 33%;
+}
+.footer-text-container p, .get-started-container p, .footer-final-line-container p{
     display: flex;
     justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+.footer-text-container p:first-of-type{
+    margin-top: 2%;
+    font-size: 3vw;
+    font-weight: 700;
+}
+
+.footer-text-container p:last-of-type{
+    font-size: 1.7vw;
+    font-weight: 600;
+}
+
+.get-started-container p:first-of-type{
+    font-size: 1.3vw;
+    font-weight: 600;
+    border: 1px solid yellowgreen;
+    background-color: yellowgreen;
+    border-radius: 1vh;
+}
+.get-started-button{
+    color: white;
+    text-decoration: none;
+}
+
+.get-started-container p:last-of-type{
+    font-size: 1.3vw;
+    font-weight: 600;
+    border: 1px solid white;
+    background-color: white;
+    border-radius: 1vh;
+}
+
+.final-chat-button{
+    color: rgb(7,80,247);
+    text-decoration: none;
+}
+
+.footer-final-line-container p{
+    font-size: .8vw;
+}
+.footer-final-line-container :nth-of-type(even){
+    font-size: 2vw;
+    color: white;
 }
