--- a/static/landing.css
+++ b/static/landing.css
@@ -280,3 +280,33 @@ header {
     font-size: 2vw;
     color: white;
 }
+
+@media only screen and (max-width: 768px) {
+    header{
+        display: grid;
+        grid-template-columns: 1.5fr 1fr;
+        column-gap: none;
+    }
+    .navbar{
+        grid-template-columns: 100%
+    }
+    .signin-try{
+
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-left: 0%;
+        column-gap: 10%;
+        margin-top: 4%;
+        margin-bottom: 5%;
+
+    }
+
+    .secondary-buttons{
+        /* border: 1px solid black; */
+        font-size: 3vw;
+        font-weight: 500;
+    }
+    .navbar a {
+        display: none;
+    }
+}
