--- a/static/signin.css
+++ b/static/signin.css
@@ -22,6 +22,7 @@ h1{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    max-height: 100%;
    
 }
 
@@ -59,15 +60,16 @@ input{
     display: flex;
     background-color: blue;
     border-bottom-right-radius: 80% 25%;
+
 }
 
 .imageframe{
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
     color: white;
     display: flex;
     margin-left: 50px;
-    margin-top: 50px;
+
     text-align: center;
     align-items: center;
 }
@@ -89,4 +91,29 @@ input{
     height: 70px;
     border-radius: 50px;
     font-size: 1.5em;
+}
+.column-right a{
+    display: none;
+}
+@media only screen and (max-width:420px) {
+    .column-left{
+        display: none;
+    }
+
+    body{
+        display: flex;
+    }
+    
+    .column-right{
+        width: 100%;
+    }
+    .socials, input{
+        width: 90%;
+    }
+    .signin-button{
+        width: 50%;
+    }
+    .column-right a{
+        display: block;
+    }
 }
